syntax = "proto3";
package kong.proxy;

import "google/protobuf/any.proto";

message KeyValuePair {
  string name = 1 [json_name = "name"];
  string value = 2 [json_name = "value"];
}

message Listener {
  string listener = 1 [json_name = "listener"];
  bool proxyProtocol = 2 [json_name = "proxy_protocol"];
  bool reusePort = 3 [json_name = "reuseport"];
  bool backlog = 4 [json_name = "backlog"];
  bool deferred = 5 [json_name = "deferred"];
  bool ssl = 6 [json_name = "ssl"];
  string ip = 7 [json_name = "ip"];
  int32 port = 8 [json_name = "port"];
  bool http2 = 9 [json_name = "http2"];
  bool bind = 10 [json_name = "bind"];
}

message Plugins {
  repeated string enabledInCluster = 1 [json_name = "enabled_in_cluster"];
  map<string, bool> availableOnServer = 2 [json_name = "available_on_server"];
}

message Configuration {
  string adminAccessLog = 1 [json_name = "admin_access_log"];
  string nginxProxyRealIpRecursive = 2 [json_name = "nginx_proxy_real_ip_recursive"];
  bool anonymousReports = 3 [json_name = "anonymous_reports"];
  repeated google.protobuf.Any statusListen = 4 [json_name = "status_listen"];
  map<string, bool> loadedPlugins = 5 [json_name = "loaded_plugins"];
  string prefix = 6 [json_name = "prefix"];
  float upstreamKeepaliveMaxRequests = 7 [json_name = "upstream_keepalive_max_requests"];
  float dbResurrectTtl = 8 [json_name = "db_resurrect_ttl"];
  repeated KeyValuePair nginxEventsDirectives = 9 [json_name = "nginx_events_directives"];
  map<string, google.protobuf.Any> nginxSupstreamDirectives = 10 [json_name = "nginx_supstream_directives"];
  string luaPackageCpath = 11 [json_name = "lua_package_cpath"];
  string pgUser = 12 [json_name = "pg_user"];
  string nginxKongStreamConf = 13 [json_name = "nginx_kong_stream_conf"];
  float dbUpdateFrequency = 14 [json_name = "db_update_frequency"];
  string nginxUpstreamKeepaliveRequests = 15 [json_name = "nginx_upstream_keepalive_requests"];
  repeated google.protobuf.Any cassandraContactPoints = 16 [json_name = "cassandra_contact_points"];
  float cassandraReplFactor = 17 [json_name = "cassandra_repl_factor"];
  string realIpRecursive = 18 [json_name = "real_ip_recursive"];
  string nginxHttpUpstreamKeepaliveTimeout = 19 [json_name = "nginx_http_upstream_keepalive_timeout"];
  bool pgSslVerify = 20 [json_name = "pg_ssl_verify"];
  string adminSslCertKey = 21 [json_name = "admin_ssl_cert_key"];
  string sslSessionTickets = 22 [json_name = "ssl_session_tickets"];
  float dnsErrorTtl = 23 [json_name = "dns_error_ttl"];
  bool nginxOptimizations = 24 [json_name = "nginx_optimizations"];
  repeated KeyValuePair nginxStreamDirectives = 25 [json_name = "nginx_stream_directives"];
  repeated Listener proxyListeners = 26 [json_name = "proxy_listeners"];
  string nginxWorkerProcesses = 27 [json_name = "nginx_worker_processes"];
  string adminSslCertDefault = 28 [json_name = "admin_ssl_cert_default"];
  string role = 29 [json_name = "role"];
  string database = 30 [json_name = "database"];
  repeated google.protobuf.Any headers = 31 [json_name = "headers"];
  map<string, google.protobuf.Any> statusListeners = 32 [json_name = "status_listeners"];
  map<string, google.protobuf.Any> nginxAdminDirectives = 33 [json_name = "nginx_admin_directives"];
  string statusAccessLog = 34 [json_name = "status_access_log"];
  map<string, google.protobuf.Any> trustedIps = 35 [json_name = "trusted_ips"];
  map<string, google.protobuf.Any> nginxSproxyDirectives = 36 [json_name = "nginx_sproxy_directives"];
  string sslCert = 37 [json_name = "ssl_cert"];
  string proxyAccessLog = 38 [json_name = "proxy_access_log"];
  float pgSemaphoreTimeout = 39 [json_name = "pg_semaphore_timeout"];
  float upstreamKeepaliveIdleTimeout = 40 [json_name = "upstream_keepalive_idle_timeout"];
  float pgPort = 41 [json_name = "pg_port"];
  string memCacheSize = 42 [json_name = "mem_cache_size"];
  string goPluginsDir = 43 [json_name = "go_plugins_dir"];
  string nginxProxyRealIpHeader = 44 [json_name = "nginx_proxy_real_ip_header"];
  string clientMaxBodySize = 45 [json_name = "client_max_body_size"];
  map<string, google.protobuf.Any> dnsResolver = 46 [json_name = "dns_resolver"];
  string sslPreferServerCiphers = 47 [json_name = "ssl_prefer_server_ciphers"];
  repeated google.protobuf.Any dbCacheWarmupEntities = 48 [json_name = "db_cache_warmup_entities"];
  float dnsStaleTtl = 49 [json_name = "dns_stale_ttl"];
  string clusterMtls = 50 [json_name = "cluster_mtls"];
  string statusErrorLog = 51 [json_name = "status_error_log"];
  string nginxStreamSslPreferServerCiphers = 52 [json_name = "nginx_stream_ssl_prefer_server_ciphers"];
  repeated google.protobuf.Any proxyListen = 53 [json_name = "proxy_listen"];
  string clientSslCertDefault = 54 [json_name = "client_ssl_cert_default"];
  map<string, bool> enabledHeaders = 55 [json_name = "enabled_headers"];
  string adminSslCertKeyDefault = 56 [json_name = "admin_ssl_cert_key_default"];
  string workerConsistency = 57 [json_name = "worker_consistency"];
  repeated KeyValuePair nginxHttpDirectives = 58 [json_name = "nginx_http_directives"];
  bool cassandraSsl = 59 [json_name = "cassandra_ssl"];
  string adminSslCert = 60 [json_name = "admin_ssl_cert"];
  bool streamProxySslEnabled = 61 [json_name = "stream_proxy_ssl_enabled"];
  string cassandraLbPolicy = 62 [json_name = "cassandra_lb_policy"];
  string sslProtocols = 63 [json_name = "ssl_protocols"];
  map<string, google.protobuf.Any> portMaps = 64 [json_name = "port_maps"];
  float upstreamKeepalive = 65 [json_name = "upstream_keepalive"];
  bool cassandraSslVerify = 66 [json_name = "cassandra_ssl_verify"];
  string realIpHeader = 67 [json_name = "real_ip_header"];
  string nginxDaemon = 68 [json_name = "nginx_daemon"];
  map<string, google.protobuf.Any> streamListeners = 69 [json_name = "stream_listeners"];
  string sslCiphers = 70 [json_name = "ssl_ciphers"];
  float cassandraSchemaConsensusTimeout = 71 [json_name = "cassandra_schema_consensus_timeout"];
  string nginxHttpUpstreamKeepaliveRequests = 72 [json_name = "nginx_http_upstream_keepalive_requests"];
  bool proxySslEnabled = 73 [json_name = "proxy_ssl_enabled"];
  string clientSslCertKeyDefault = 74 [json_name = "client_ssl_cert_key_default"];
  repeated google.protobuf.Any clusterListen = 75 [json_name = "cluster_listen"];
  bool pgSsl = 76 [json_name = "pg_ssl"];
  string sslCertKey = 77 [json_name = "ssl_cert_key"];
  float luaSocketPoolSize = 78 [json_name = "lua_socket_pool_size"];
  float workerStateUpdateFrequency = 79 [json_name = "worker_state_update_frequency"];
  bool pgRoSsl = 80 [json_name = "pg_ro_ssl"];
  string nginxEventsWorkerConnections = 81 [json_name = "nginx_events_worker_connections"];
  string nginxMainDaemon = 82 [json_name = "nginx_main_daemon"];
  bool dnsNoSync = 83 [json_name = "dns_no_sync"];
  repeated google.protobuf.Any adminListen = 84 [json_name = "admin_listen"];
  float cassandraPort = 85 [json_name = "cassandra_port"];
  repeated KeyValuePair nginxMainDirectives = 86 [json_name = "nginx_main_directives"];
  string statusSslCertDefault = 87 [json_name = "status_ssl_cert_default"];
  string clientBodyBufferSize = 88 [json_name = "client_body_buffer_size"];
  repeated KeyValuePair nginxUpstreamDirectives = 89 [json_name = "nginx_upstream_directives"];
  string nginxHttpSslPreferServerCiphers = 90 [json_name = "nginx_http_ssl_prefer_server_ciphers"];
  string nginxStreamSslSessionTimeout = 91 [json_name = "nginx_stream_ssl_session_timeout"];
  float pgTimeout = 92 [json_name = "pg_timeout"];
  string nginxHttpClientMaxBodySize = 93 [json_name = "nginx_http_client_max_body_size"];
  bool statusSslEnabled = 94 [json_name = "status_ssl_enabled"];
  string nginxUpstreamKeepaliveTimeout = 95 [json_name = "nginx_upstream_keepalive_timeout"];
  map<string, google.protobuf.Any> nginxHttpStatusDirectives = 96 [json_name = "nginx_http_status_directives"];
  string dnsHostsfile = 97 [json_name = "dns_hostsfile"];
  repeated google.protobuf.Any plugins = 98 [json_name = "plugins"];
  string cassandraUsername = 99 [json_name = "cassandra_username"];
  string nginxErrLogs = 100 [json_name = "nginx_err_logs"];
  string nginxMainWorkerProcesses = 101 [json_name = "nginx_main_worker_processes"];
  bool kic = 102 [json_name = "kic"];
  string clusterControlPlane = 103 [json_name = "cluster_control_plane"];
  string nginxHttpClientBodyBufferSize = 104 [json_name = "nginx_http_client_body_buffer_size"];
  string nginxKongConf = 105 [json_name = "nginx_kong_conf"];
  bool clientSsl = 106 [json_name = "client_ssl"];
  string sslCertDefault = 107 [json_name = "ssl_cert_default"];
  repeated google.protobuf.Any dnsOrder = 108 [json_name = "dns_order"];
  repeated KeyValuePair nginxProxyDirectives = 109 [json_name = "nginx_proxy_directives"];
  string statusSslCertKeyDefault = 110 [json_name = "status_ssl_cert_key_default"];
  repeated Listener adminListeners = 111 [json_name = "admin_listeners"];
  string nginxConf = 112 [json_name = "nginx_conf"];
  bool adminSslEnabled = 113 [json_name = "admin_ssl_enabled"];
  string nginxHttpUpstreamKeepalive = 114 [json_name = "nginx_http_upstream_keepalive"];
  string pgHost = 115 [json_name = "pg_host"];
  string goPluginserverExe = 116 [json_name = "go_pluginserver_exe"];
  float dbCacheTtl = 117 [json_name = "db_cache_ttl"];
  float upstreamKeepalivePoolSize = 118 [json_name = "upstream_keepalive_pool_size"];
  string adminAccLogs = 119 [json_name = "admin_acc_logs"];
  string nginxEventsMultiAccept = 120 [json_name = "nginx_events_multi_accept"];
  string sslCertKeyDefault = 121 [json_name = "ssl_cert_key_default"];
  float luaSslVerifyDepth = 122 [json_name = "lua_ssl_verify_depth"];
  string cassandraReadConsistency = 123 [json_name = "cassandra_read_consistency"];
  float dbUpdatePropagation = 124 [json_name = "db_update_propagation"];
  string nginxStreamSslSessionTickets = 125 [json_name = "nginx_stream_ssl_session_tickets"];
  float pgMaxConcurrentQueries = 126 [json_name = "pg_max_concurrent_queries"];
  float dnsNotFoundTtl = 127 [json_name = "dns_not_found_ttl"];
  repeated google.protobuf.Any streamListen = 128 [json_name = "stream_listen"];
  float cassandraRefreshFrequency = 129 [json_name = "cassandra_refresh_frequency"];
  string logLevel = 130 [json_name = "log_level"];
  string nginxStreamSslProtocols = 131 [json_name = "nginx_stream_ssl_protocols"];
  string errorDefaultType = 132 [json_name = "error_default_type"];
  bool pgRoSslVerify = 133 [json_name = "pg_ro_ssl_verify"];
  string nginxHttpSslSessionTickets = 134 [json_name = "nginx_http_ssl_session_tickets"];
  string cassandraReplStrategy = 135 [json_name = "cassandra_repl_strategy"];
  float cassandraTimeout = 136 [json_name = "cassandra_timeout"];
  repeated KeyValuePair nginxHttpUpstreamDirectives = 137 [json_name = "nginx_http_upstream_directives"];
  string nginxAccLogs = 138 [json_name = "nginx_acc_logs"];
  string nginxHttpSslSessionTimeout = 139 [json_name = "nginx_http_ssl_session_timeout"];
  string proxyErrorLog = 140 [json_name = "proxy_error_log"];
  string cassandraKeyspace = 141 [json_name = "cassandra_keyspace"];
  map<string, google.protobuf.Any> hostPorts = 142 [json_name = "host_ports"];
  string sslCertCsrDefault = 143 [json_name = "ssl_cert_csr_default"];
  string cassandraWriteConsistency = 144 [json_name = "cassandra_write_consistency"];
  string luaPackagePath = 145 [json_name = "lua_package_path"];
  map<string, google.protobuf.Any> nginxStatusDirectives = 146 [json_name = "nginx_status_directives"];
  string pgPassword = 147 [json_name = "pg_password"];
  string nginxPid = 148 [json_name = "nginx_pid"];
  string nginxHttpSslProtocols = 149 [json_name = "nginx_http_ssl_protocols"];
  repeated google.protobuf.Any cassandraDataCenters = 150 [json_name = "cassandra_data_centers"];
  string sslSessionTimeout = 151 [json_name = "ssl_session_timeout"];
  string nginxUpstreamKeepalive = 152 [json_name = "nginx_upstream_keepalive"];
  string adminErrorLog = 153 [json_name = "admin_error_log"];
  string sslCipherSuite = 154 [json_name = "ssl_cipher_suite"];
  string pgDatabase = 155 [json_name = "pg_database"];
  string nginxMainWorkerRlimitNofile = 156 [json_name = "nginx_main_worker_rlimit_nofile"];
  string kongEnv = 157 [json_name = "kong_env"];
}

message NodeInfoResponse {
  Plugins plugins = 1 [json_name = "plugins"];
  Configuration configuration = 2 [json_name = "configuration"];
  map<string, float> timers = 3 [json_name = "timers"];
  string hostname = 4 [json_name = "hostname"];
  string tagline = 5 [json_name = "tagline"];
  string version = 6 [json_name = "version"];
  string nodeId = 7 [json_name = "node_id"];
  string luaVersion = 8 [json_name = "lua_version"];
  map<string, float> prngSeeds = 9 [json_name = "prng_seeds"];
}
